# os

./: .gitignore  AI_INTEGRATION.md  Cargo.toml  README.md  SECURITY.md  dev.sh
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
ai/daemon/: Cargo.toml
ai/daemon/src/: analyzer.rs  main.rs  models.rs  patcher.rs  provider.rs  repair.rs  watcher.rs
ai/release-bot/: Cargo.toml
ai/release-bot/src/: main.rs
docs/: AI_INTEGRATION.md  ARCHITECTURE.md  ASSISTANT_ARCHITECTURE.md  BUILD_TROUBLESHOOTING.md  CONTRIBUTING.md  HARDWARE_NOKIA61PLUS.md  NOKIA61PLUS_BOOT_ATTEMPT_N1.md  NOKIA61PLUS_BOOT_RCA.md  QUICK_REFERENCE.md  README_BUILD_TOOLS.md  REPRODUCIBILITY_TOOLS.md  walkthrough.md
docs/forensics/: antigravity_artifact_hashes.sha256  antigravity_checkpoint_preservation.md  antigravity_latest_boot_image.txt  antigravity_source_hashes.sha256  antigravity_tool_hashes.sha256  generated_kernel_config.sha256
docs/forensics/snapshots/: boot-image-params.stale.txt  boot-pack-manifest.stale.txt
docs/task-phases/: phase_1_completion_report.md  phase_1_verification_matrix.md  phase_2_implementation_plan.md
docs/todds/: sprint_phases.md
docs/todos/: completed_tasks.md  sprint_phases.md
hal/src/: lib.rs
kernel/: aether_defconfig  zethra_defconfig
kernel/dts/: sdm636-nokia-frt.dts
kernel/experiments/: 01-headless.config.frag  02-drm-nodisp.config.frag  03-drm-fbdev.config.frag  04-drm-fbcon.config.frag  05-drm-verbose.config.frag  06-fbdev-lockless.config.frag
kernel/firmware/qcom/: .gitignore  README.md
kernel/patches/: 0001-zethra-nokia-sdm636-bringup.patch  0002-add-otm1911a-panel-driver.patch
kernel/patches/forensics/: 9001-antigravity-legacy-bringup-exact.patch  9002-antigravity-msm-dpu-checkpoints-00-17.patch  9003-antigravity-drm-registration-checkpoints-20-28.patch  9004-antigravity-drm-fbdev-checkpoints-30-43.patch  9005-antigravity-panel-mock-delta.patch
scratch/: extract_pstore.py  push_and_reboot.py  reboot_device.py  run_command_on_device.py  time_reboot_cycle.py
services/aetherd/: Cargo.toml
services/aetherd/src/: main.rs
services/network/: Cargo.toml
services/network/src/: dns.rs  main.rs  netlink.rs  wifi.rs
services/ota/: Cargo.toml
services/ota/src/: main.rs  partition.rs  rollback.rs  server.rs  signing.rs
services/sandbox/: Cargo.toml
services/sandbox/src/: ipc.rs  lifecycle.rs  main.rs  permissions.rs  runtime.rs
services/sensors/: Cargo.toml
services/sensors/src/: main.rs
services/telephony/: Cargo.toml
services/telephony/src/: at.rs  emergency.rs  main.rs  pdu.rs
services/zethrad/: Cargo.toml
services/zethrad/src/: main.rs
shell/compositor/: Cargo.toml
shell/compositor/src/: main.rs
tools/: parse_bootimg.py  test_key.pem.pub  unpack_bootimg.py
tools/ci/: check_kernel_config.py
tools/forensics/antigravity/: dump_boot_dmesg.py  push_reboot_tool.py
