[workspace]
resolver = "2"
members = [
    "services/aetherd",
    "services/telephony",
    "services/network",
    "services/sensors",
    "services/ota",
    "services/sandbox",
    "shell/compositor",
    "ai/daemon",
    "ai/release-bot",
]

[workspace.package]
version    = "0.1.0"
authors    = ["AetherOS Contributors"]
license    = "Apache-2.0"
edition    = "2021"

[workspace.dependencies]
tokio              = { version = "1.43", features = ["full"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono             = { version = "0.4", features = ["serde"] }
uuid               = { version = "1.10", features = ["v4"] }
