[package]
name    = "aether-release-bot"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aether-release-bot"
path = "src/main.rs"

[dependencies]
tokio.workspace      = true
serde.workspace      = true
serde_json.workspace = true
anyhow.workspace     = true
tracing.workspace    = true
tracing-subscriber.workspace = true
reqwest = { version = "=0.11.23", features = ["json", "rustls-tls"], default-features = false }
chrono.workspace     = true
uuid.workspace       = true
semver               = "1"
