[package]
name    = "zethra-release-bot"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "zethra-release-bot"
path = "src/main.rs"

[dependencies]
tokio.workspace      = true
serde.workspace      = true
serde_json.workspace = true
anyhow.workspace     = true
tracing.workspace    = true
tracing-subscriber.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"], default-features = false }
chrono.workspace     = true
uuid.workspace       = true
semver               = "1"
