[package]
name    = "aether-network"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aether-networkd"
path = "src/main.rs"

[dependencies]
tokio.workspace      = true
serde.workspace      = true
serde_json.workspace = true
anyhow.workspace     = true
tracing.workspace    = true
tracing-subscriber.workspace = true
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
rand = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.13"
netlink-packet-core = "0.7"
netlink-packet-route = "0.19"
