[package]
name    = "aether-otad"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aether-otad"
path = "src/main.rs"

[dependencies]
tokio.workspace      = true
serde.workspace      = true
serde_json.workspace = true
anyhow.workspace     = true
tracing.workspace    = true
tracing-subscriber.workspace = true
reqwest              = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
chrono.workspace     = true
sha2                 = "0.10"
hex                  = "0.4"
futures-util         = "0.3"
ed25519-dalek        = "2.1"
base64               = "0.21"
rand                 = "0.8"
