[package]
name    = "zethra-otad"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "zethra-otad"
path = "src/main.rs"

[dependencies]
tokio.workspace      = true
serde.workspace      = true
serde_json.workspace = true
anyhow.workspace     = true
tracing.workspace    = true
tracing-subscriber.workspace = true
reqwest              = { version = "0.12", features = ["json", "stream", "rustls-tls-native-roots"], default-features = false }
chrono.workspace     = true
sha2                 = "0.10"
hex                  = "0.4"
futures-util         = "0.3"
ed25519-dalek        = "2.1"
base64               = "0.21"
