[package]
name    = "zethra-sandbox"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "zethra-sandbox"
path = "src/main.rs"

[dependencies]
wasmtime   = "41.0"
tokio.workspace      = true
serde.workspace      = true
anyhow.workspace     = true
tracing.workspace    = true
tracing-subscriber.workspace = true
toml = "0.8"
