[package]
name    = "aether-sensord"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aether-sensord"
path = "src/main.rs"

[dependencies]
tokio.workspace      = true
serde.workspace      = true
serde_json.workspace = true
anyhow.workspace     = true
tracing.workspace    = true
tracing-subscriber.workspace = true
