[package]
name    = "zethra-sensord"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "zethra-sensord"
path = "src/main.rs"

[dependencies]
tokio.workspace      = true
serde.workspace      = true
serde_json.workspace = true
anyhow.workspace     = true
tracing.workspace    = true
tracing-subscriber.workspace = true
