[package]
name    = "zethrad"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "zethrad"
path = "src/main.rs"

[dependencies]
tokio.workspace     = true
serde.workspace     = true
serde_json.workspace = true
anyhow.workspace    = true
tracing.workspace   = true
tracing-subscriber.workspace = true
chrono.workspace = true
toml    = "0.8"
glob    = "0.3"
